tests/negative/gold/incomplete_comments_test.gold
tests/negative/incomplete_comments_test.toit:4:3: error: Unterminated multi-line comment
  /*
  ^~
Compilation failed.
